# PlotPerfect

./: .gitignore  INFO  README.md  audit_dwg.lsp  cleanup_dwg.lsp  numbering_app.py  overkill_dwg.lsp  process_layouts.lsp  pyproject.toml  run_numbering.bat  run_numbering.py  run_numbering_admin.bat  run_task_manager_admin.bat  setup_print.lsp  task1_results.json  task2_results.json
src/autocad_tasks/: __init__.py  main.py
src/autocad_tasks/tasks/: task1.py  task2.py  task3.py  task4.py  task5.py
src/autocad_tasks/utils/: autocad_utils.py
src/autocad_tasks/utils/numbering/: __init__.py  autocad_handler.py  gui.py  numbering_engine.py
